--- a/package.json
+++ b/package.json
@@ -12,20 +12,31 @@
   },
   "dependencies": {
     "axios": "^1.3.1",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "firebase": "^10.12.5",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.0.0",
     "vite": "^5.3.1"
   }
 }
