--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,39 @@
+# Dependências do projeto
 node_modules/
+
+# Diretórios de build
 dist/
 build/
+
+# Arquivo de variáveis de ambiente
 .env
+
+# Arquivos e diretórios do sistema
 .DS_Store
 .cache/
+
+# Configurações de IDE
 .vscode/
 .idea/
+
+# Arquivo de lock do npm
 package-lock.json
+
+# Logs
+*.log
+logs/
+*.log.*
+
+# Arquivos de cache
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Arquivos temporários
+*.tmp
+*.swp
+
+# Arquivos de sistema e de backup
+*.bak
+*.old
+*.swo
